--- a/add.html
+++ b/add.html
@@ -81,7 +81,8 @@
         uniqueId: $("#unique-id").val().trim()
       };
 
-      $.post("/api/tables", newReseveration, function(data){
+      $.post("/api/tables", newReseveration)
+      .then(function(data){
           if(data){
           alert("Adding reservation...");
           } else{
